stack3.orbit8.com/sysconfig/iptables
# Generated by iptables-save v1.4.21 on Tue Feb 21 16:49:45 2017
*nat
:PREROUTING ACCEPT [3129482:188545147]
:INPUT ACCEPT [9970:929985]
:OUTPUT ACCEPT [67093:4157044]
:POSTROUTING ACCEPT [69333:4382472]
:neutron-openvswi-OUTPUT - [0:0]
:neutron-openvswi-POSTROUTING - [0:0]
:neutron-openvswi-PREROUTING - [0:0]
:neutron-openvswi-float-snat - [0:0]
:neutron-openvswi-snat - [0:0]
:neutron-postrouting-bottom - [0:0]
-A PREROUTING -j neutron-openvswi-PREROUTING
-A OUTPUT -j neutron-openvswi-OUTPUT
-A POSTROUTING -j neutron-openvswi-POSTROUTING
-A POSTROUTING -j neutron-postrouting-bottom
-A neutron-openvswi-snat -j neutron-openvswi-float-snat
-A neutron-postrouting-bottom -m comment --comment "Perform source NAT on outgoing traffic." -j neutron-openvswi-snat
COMMIT
# Completed on Tue Feb 21 16:49:45 2017
# Generated by iptables-save v1.4.21 on Tue Feb 21 16:49:45 2017
*mangle
:PREROUTING ACCEPT [122162651:511589478997]
:INPUT ACCEPT [117665694:508759627411]
:FORWARD ACCEPT [2119353:2684052024]
:OUTPUT ACCEPT [64518782:683492391517]
:POSTROUTING ACCEPT [65742764:686126137315]
:neutron-openvswi-FORWARD - [0:0]
:neutron-openvswi-INPUT - [0:0]
:neutron-openvswi-OUTPUT - [0:0]
:neutron-openvswi-POSTROUTING - [0:0]
:neutron-openvswi-PREROUTING - [0:0]
:neutron-openvswi-float-snat - [0:0]
:neutron-openvswi-floatingip - [0:0]
:neutron-openvswi-mark - [0:0]
:neutron-openvswi-scope - [0:0]
-A PREROUTING -j neutron-openvswi-PREROUTING
-A INPUT -j neutron-openvswi-INPUT
-A FORWARD -j neutron-openvswi-FORWARD
-A OUTPUT -j neutron-openvswi-OUTPUT
-A POSTROUTING -j neutron-openvswi-POSTROUTING
-A neutron-openvswi-PREROUTING -j neutron-openvswi-mark
-A neutron-openvswi-PREROUTING -j neutron-openvswi-scope
-A neutron-openvswi-PREROUTING -m connmark ! --mark 0x0/0xffff0000 -j CONNMARK --restore-mark --nfmask 0xffff0000 --ctmask 0xffff0000
-A neutron-openvswi-PREROUTING -j neutron-openvswi-floatingip
-A neutron-openvswi-float-snat -m connmark --mark 0x0/0xffff0000 -j CONNMARK --save-mark --nfmask 0xffff0000 --ctmask 0xffff0000
COMMIT
# Completed on Tue Feb 21 16:49:45 2017
# Generated by iptables-save v1.4.21 on Tue Feb 21 16:49:45 2017
*filter
:INPUT ACCEPT [23119:2937411]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [25367:21655599]
:neutron-filter-top - [0:0]
:neutron-openvswi-FORWARD - [0:0]
:neutron-openvswi-INPUT - [0:0]
:neutron-openvswi-OUTPUT - [0:0]
:neutron-openvswi-i32265c1a-9 - [0:0]
:neutron-openvswi-i9b338bf8-a - [0:0]
:neutron-openvswi-local - [0:0]
:neutron-openvswi-o32265c1a-9 - [0:0]
:neutron-openvswi-o9b338bf8-a - [0:0]
:neutron-openvswi-s32265c1a-9 - [0:0]
:neutron-openvswi-s9b338bf8-a - [0:0]
:neutron-openvswi-scope - [0:0]
:neutron-openvswi-sg-chain - [0:0]
:neutron-openvswi-sg-fallback - [0:0]
-A INPUT -j neutron-openvswi-INPUT
-A INPUT -s 10.1.13.251/32 -p tcp -m multiport --dports 5666 -m comment --comment "001 nagios-nrpe incoming nagios_nrpe" -j ACCEPT
-A INPUT -s 10.1.13.0/24 -p udp -m multiport --dports 4789 -m comment --comment "001 neutron tunnel port incoming neutron_tunnel_10.1.13.13_10.1.13.0/24" -j ACCEPT
-A INPUT -s 10.1.13.251/32 -p tcp -m multiport --dports 5900:5999 -m comment --comment "001 nova compute incoming nova_compute" -j ACCEPT
-A INPUT -s 10.1.13.11/32 -p tcp -m multiport --dports 16509,49152:49215 -m comment --comment "001 nova qemu migration incoming nova_qemu_migration_10.1.13.13_10.1.13.11" -j ACCEPT
-A INPUT -s 10.1.13.12/32 -p tcp -m multiport --dports 16509,49152:49215 -m comment --comment "001 nova qemu migration incoming nova_qemu_migration_10.1.13.13_10.1.13.12" -j ACCEPT
-A INPUT -s 10.1.13.13/32 -p tcp -m multiport --dports 16509,49152:49215 -m comment --comment "001 nova qemu migration incoming nova_qemu_migration_10.1.13.13_10.1.13.13" -j ACCEPT
-A INPUT -s 10.1.13.14/32 -p tcp -m multiport --dports 16509,49152:49215 -m comment --comment "001 nova qemu migration incoming nova_qemu_migration_10.1.13.13_10.1.13.14" -j ACCEPT
-A INPUT -s 10.1.13.15/32 -p tcp -m multiport --dports 16509,49152:49215 -m comment --comment "001 nova qemu migration incoming nova_qemu_migration_10.1.13.13_10.1.13.15" -j ACCEPT
-A INPUT -s 10.1.13.16/32 -p tcp -m multiport --dports 16509,49152:49215 -m comment --comment "001 nova qemu migration incoming nova_qemu_migration_10.1.13.13_10.1.13.16" -j ACCEPT
-A FORWARD -j neutron-filter-top
-A FORWARD -j neutron-openvswi-FORWARD
-A OUTPUT -j neutron-filter-top
-A OUTPUT -j neutron-openvswi-OUTPUT
-A neutron-filter-top -j neutron-openvswi-local
-A neutron-openvswi-FORWARD -j neutron-openvswi-scope
-A neutron-openvswi-FORWARD -m physdev --physdev-out tap32265c1a-9d --physdev-is-bridged -m comment --comment "Direct traffic from the VM interface to the security group chain." -j neutron-openvswi-sg-chain
-A neutron-openvswi-FORWARD -m physdev --physdev-in tap32265c1a-9d --physdev-is-bridged -m comment --comment "Direct traffic from the VM interface to the security group chain." -j neutron-openvswi-sg-chain
-A neutron-openvswi-FORWARD -m physdev --physdev-out tap9b338bf8-ac --physdev-is-bridged -m comment --comment "Direct traffic from the VM interface to the security group chain." -j neutron-openvswi-sg-chain
-A neutron-openvswi-FORWARD -m physdev --physdev-in tap9b338bf8-ac --physdev-is-bridged -m comment --comment "Direct traffic from the VM interface to the security group chain." -j neutron-openvswi-sg-chain
-A neutron-openvswi-INPUT -m physdev --physdev-in tap32265c1a-9d --physdev-is-bridged -m comment --comment "Direct incoming traffic from VM to the security group chain." -j neutron-openvswi-o32265c1a-9
-A neutron-openvswi-INPUT -m physdev --physdev-in tap9b338bf8-ac --physdev-is-bridged -m comment --comment "Direct incoming traffic from VM to the security group chain." -j neutron-openvswi-o9b338bf8-a
-A neutron-openvswi-i32265c1a-9 -m state --state RELATED,ESTABLISHED -m comment --comment "Direct packets associated with a known session to the RETURN chain." -j RETURN
-A neutron-openvswi-i32265c1a-9 -s 10.1.15.222/32 -p udp -m udp --sport 67 -m udp --dport 68 -j RETURN
-A neutron-openvswi-i32265c1a-9 -s 10.1.15.6/32 -p udp -m udp --sport 67 -m udp --dport 68 -j RETURN
-A neutron-openvswi-i32265c1a-9 -s 10.1.15.7/32 -p udp -m udp --sport 67 -m udp --dport 68 -j RETURN
-A neutron-openvswi-i32265c1a-9 -m set --match-set NIPv4092a95a9-7919-4df7-9beb- src -j RETURN
-A neutron-openvswi-i32265c1a-9 -p icmp -j RETURN
-A neutron-openvswi-i32265c1a-9 -p tcp -m tcp --dport 8000 -j RETURN
-A neutron-openvswi-i32265c1a-9 -p tcp -m tcp --dport 22 -j RETURN
-A neutron-openvswi-i32265c1a-9 -p tcp -m tcp --dport 1521 -j RETURN
-A neutron-openvswi-i32265c1a-9 -m state --state INVALID -m comment --comment "Drop packets that appear related to an existing connection (e.g. TCP ACK/FIN) but do not have an entry in conntrack." -j DROP
-A neutron-openvswi-i32265c1a-9 -m comment --comment "Send unmatched traffic to the fallback chain." -j neutron-openvswi-sg-fallback
-A neutron-openvswi-i9b338bf8-a -m state --state RELATED,ESTABLISHED -m comment --comment "Direct packets associated with a known session to the RETURN chain." -j RETURN
-A neutron-openvswi-i9b338bf8-a -s 10.1.15.222/32 -p udp -m udp --sport 67 -m udp --dport 68 -j RETURN
-A neutron-openvswi-i9b338bf8-a -s 10.1.15.6/32 -p udp -m udp --sport 67 -m udp --dport 68 -j RETURN
-A neutron-openvswi-i9b338bf8-a -s 10.1.15.7/32 -p udp -m udp --sport 67 -m udp --dport 68 -j RETURN
-A neutron-openvswi-i9b338bf8-a -p icmp -j RETURN
-A neutron-openvswi-i9b338bf8-a -p tcp -m tcp --dport 8000 -j RETURN
-A neutron-openvswi-i9b338bf8-a -p tcp -m tcp -m multiport --dports 5900:5910 -j RETURN
-A neutron-openvswi-i9b338bf8-a -p tcp -m tcp --dport 22 -j RETURN
-A neutron-openvswi-i9b338bf8-a -p tcp -m tcp --dport 1521 -j RETURN
-A neutron-openvswi-i9b338bf8-a -m state --state INVALID -m comment --comment "Drop packets that appear related to an existing connection (e.g. TCP ACK/FIN) but do not have an entry in conntrack." -j DROP
-A neutron-openvswi-i9b338bf8-a -m comment --comment "Send unmatched traffic to the fallback chain." -j neutron-openvswi-sg-fallback
-A neutron-openvswi-o32265c1a-9 -s 0.0.0.0/32 -d 255.255.255.255/32 -p udp -m udp --sport 68 --dport 67 -m comment --comment "Allow DHCP client traffic." -j RETURN
-A neutron-openvswi-o32265c1a-9 -j neutron-openvswi-s32265c1a-9
-A neutron-openvswi-o32265c1a-9 -p udp -m udp --sport 68 --dport 67 -m comment --comment "Allow DHCP client traffic." -j RETURN
-A neutron-openvswi-o32265c1a-9 -p udp -m udp --sport 67 -m udp --dport 68 -m comment --comment "Prevent DHCP Spoofing by VM." -j DROP
-A neutron-openvswi-o32265c1a-9 -m state --state RELATED,ESTABLISHED -m comment --comment "Direct packets associated with a known session to the RETURN chain." -j RETURN
-A neutron-openvswi-o32265c1a-9 -j RETURN
-A neutron-openvswi-o32265c1a-9 -m state --state INVALID -m comment --comment "Drop packets that appear related to an existing connection (e.g. TCP ACK/FIN) but do not have an entry in conntrack." -j DROP
-A neutron-openvswi-o32265c1a-9 -m comment --comment "Send unmatched traffic to the fallback chain." -j neutron-openvswi-sg-fallback
-A neutron-openvswi-o9b338bf8-a -s 0.0.0.0/32 -d 255.255.255.255/32 -p udp -m udp --sport 68 --dport 67 -m comment --comment "Allow DHCP client traffic." -j RETURN
-A neutron-openvswi-o9b338bf8-a -j neutron-openvswi-s9b338bf8-a
-A neutron-openvswi-o9b338bf8-a -p udp -m udp --sport 68 --dport 67 -m comment --comment "Allow DHCP client traffic." -j RETURN
-A neutron-openvswi-o9b338bf8-a -p udp -m udp --sport 67 -m udp --dport 68 -m comment --comment "Prevent DHCP Spoofing by VM." -j DROP
-A neutron-openvswi-o9b338bf8-a -m state --state RELATED,ESTABLISHED -m comment --comment "Direct packets associated with a known session to the RETURN chain." -j RETURN
-A neutron-openvswi-o9b338bf8-a -j RETURN
-A neutron-openvswi-o9b338bf8-a -m state --state INVALID -m comment --comment "Drop packets that appear related to an existing connection (e.g. TCP ACK/FIN) but do not have an entry in conntrack." -j DROP
-A neutron-openvswi-o9b338bf8-a -m comment --comment "Send unmatched traffic to the fallback chain." -j neutron-openvswi-sg-fallback
-A neutron-openvswi-s32265c1a-9 -s 10.1.15.147/32 -m mac --mac-source FA:16:3E:66:01:13 -m comment --comment "Allow traffic from defined IP/MAC pairs." -j RETURN
-A neutron-openvswi-s32265c1a-9 -m comment --comment "Drop traffic without an IP/MAC allow rule." -j DROP
-A neutron-openvswi-s9b338bf8-a -s 10.1.15.200/32 -m mac --mac-source FA:16:3E:A6:AD:09 -m comment --comment "Allow traffic from defined IP/MAC pairs." -j RETURN
-A neutron-openvswi-s9b338bf8-a -m comment --comment "Drop traffic without an IP/MAC allow rule." -j DROP
-A neutron-openvswi-sg-chain -m physdev --physdev-out tap32265c1a-9d --physdev-is-bridged -m comment --comment "Jump to the VM specific chain." -j neutron-openvswi-i32265c1a-9
-A neutron-openvswi-sg-chain -m physdev --physdev-in tap32265c1a-9d --physdev-is-bridged -m comment --comment "Jump to the VM specific chain." -j neutron-openvswi-o32265c1a-9
-A neutron-openvswi-sg-chain -m physdev --physdev-out tap9b338bf8-ac --physdev-is-bridged -m comment --comment "Jump to the VM specific chain." -j neutron-openvswi-i9b338bf8-a
-A neutron-openvswi-sg-chain -m physdev --physdev-in tap9b338bf8-ac --physdev-is-bridged -m comment --comment "Jump to the VM specific chain." -j neutron-openvswi-o9b338bf8-a
-A neutron-openvswi-sg-chain -j ACCEPT
-A neutron-openvswi-sg-fallback -m comment --comment "Default drop rule for unmatched traffic." -j DROP
COMMIT
# Completed on Tue Feb 21 16:49:45 2017
# Generated by iptables-save v1.4.21 on Tue Feb 21 16:49:45 2017
*raw
:PREROUTING ACCEPT [30655:14182289]
:OUTPUT ACCEPT [25595:21936379]
:neutron-openvswi-OUTPUT - [0:0]
:neutron-openvswi-PREROUTING - [0:0]
-A PREROUTING -j neutron-openvswi-PREROUTING
-A OUTPUT -j neutron-openvswi-OUTPUT
-A neutron-openvswi-PREROUTING -m physdev --physdev-in qvb32265c1a-9d -j CT --zone 1
-A neutron-openvswi-PREROUTING -m physdev --physdev-in tap32265c1a-9d -j CT --zone 1
-A neutron-openvswi-PREROUTING -m physdev --physdev-in qvb9b338bf8-ac -j CT --zone 4
-A neutron-openvswi-PREROUTING -m physdev --physdev-in tap9b338bf8-ac -j CT --zone 4
COMMIT
# Completed on Tue Feb 21 16:49:45 2017
